# MSPilot

./: CMakeLists.txt  LICENSE  README.md  msp432-toolchain.cmake
src/: FreeRTOSConfig.h  debug.c  debug.h  main.c  startup_msp432p401r_gcc.c  system_msp432p401r.c  uart.c  uart.h
